--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: mlogger
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
 
 environment:
   sdk: ^3.7.0
@@ -12,6 +11,7 @@ dependencies:
     sdk: flutter
   talker_flutter: ^4.7.0
   talker_riverpod_logger: ^4.6.3
+  logger: ^2.6.0
   
 
 dev_dependencies:
@@ -23,7 +23,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
